[update] bentuk respon baru /news/home
